--- a/project1/packages.config
+++ b/project1/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
+  <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net472" />
+  <package id="MaterialMessageBox" version="1.0.0.11" targetFramework="net472" />
 </packages>
