--- a/project1/project1.csproj
+++ b/project1/project1.csproj
@@ -79,8 +79,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UserControl.xaml.cs">
+      <DependentUpon>UserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl1.xaml.cs">
+      <DependentUpon>UserControl1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl2.xaml.cs">
+      <DependentUpon>UserControl2.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window2.xaml.cs">
+      <DependentUpon>Window2.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -100,7 +112,23 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControl1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControl2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -134,6 +162,21 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Photo\login\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Photo\VideoCard\Nvidia\rtx2080ti.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Photo\Processor\Intel\i3_8100.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Photo\VideoCard\Nvidia\2080ti.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Photo\VideoCard\Nvidia\2070.png" />
+    <Resource Include="Photo\VideoCard\Nvidia\2080.png" />
+    <Resource Include="Photo\VideoCard\Nvidia\rtx2070.png" />
+    <Resource Include="Photo\VideoCard\Nvidia\rtx2080.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
