+DataGrid +IconProject +New Processors

--- a/project1/App.config
+++ b/project1/App.config
@@ -18,7 +18,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=ZAIMOD;initial catalog=project;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=ZAIMOD;initial catalog=project;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="project1.Properties.Settings.projectConnectionString"
+      connectionString="Data Source=ZAIMOD;Initial Catalog=project;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
